// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell content renderers datasetLink renders correctly 1`] = `
<WithStyles(ForwardRef(Link))
  component={[Function]}
  to="/browse/investigation/1/dataset/2/datafile"
>
  test
</WithStyles(ForwardRef(Link))>
`;

exports[`Cell content renderers investigationLink renders correctly 1`] = `
<WithStyles(ForwardRef(Link))
  component={[Function]}
  to="/browse/investigation/1/dataset"
>
  test
</WithStyles(ForwardRef(Link))>
`;
